--- a/CSHTML5.Demos.HtmlCanvasPerformance1/CSHTML5.Demos.HtmlCanvasPerformance1.csproj
+++ b/CSHTML5.Demos.HtmlCanvasPerformance1/CSHTML5.Demos.HtmlCanvasPerformance1.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
