--- a/CSHTML5.Demos.HtmlCanvasPerformance1/CSHTML5.Demos.HtmlCanvasPerformance1.csproj
+++ b/CSHTML5.Demos.HtmlCanvasPerformance1/CSHTML5.Demos.HtmlCanvasPerformance1.csproj
@@ -73,6 +73,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Content>
+    <Content Include="SmallLogo.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="MainPage.xaml">
